added a js file

--- a/start_page/start_page.html
+++ b/start_page/start_page.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="start_page.css">
-    <!-- TODO @hany: link the javascript file -->
+    <script type="text/javascript" src="start_page.js"></script>
 </head>
 
 <body>
